--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "eframe_template"
-default-run = "eframe_template_bin"
+name = "my_app"
+default-run = "my_app_bin"
 version = "0.1.0"
-authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
+authors = [" littley <1628466962@qq.com>"]
 edition = "2021"
-rust-version = "1.60"
+rust-version = "1.63"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
-name = "eframe_template_bin"
+name = "my_app_bin"
 path = "src/main.rs"
 
 [lib]
@@ -44,3 +44,5 @@ opt-level = 2 # fast and small wasm
 # If you fork https://github.com/emilk/egui you can test with:
 # egui = { path = "../egui/egui" }
 # eframe = { path = "../egui/eframe" }
+[dev-dependencies]
+egui_demo_lib = { version = "0.18.0", default-features = false }
